--- a/Pandas02_데이터프레임위아래좌우연결.ipynb
+++ b/Pandas02_데이터프레임위아래좌우연결.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        "1    2    4"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -346,19 +346,19 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>컴퓨터와주변기기</td>\n",
-       "      <td>129890</td>\n",
-       "      <td>앱코</td>\n",
-       "      <td>1227</td>\n",
-       "      <td>-0.11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>교육서비스</td>\n",
        "      <td>072870</td>\n",
        "      <td>메가스터디</td>\n",
        "      <td>11320</td>\n",
        "      <td>-0.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>컴퓨터와주변기기</td>\n",
+       "      <td>129890</td>\n",
+       "      <td>앱코</td>\n",
+       "      <td>1227</td>\n",
+       "      <td>-0.11</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -367,87 +367,40 @@
       "text/plain": [
        "         업종    종목코드    종목명    현재가   등락률\n",
        "0  컴퓨터와주변기기  044380   주연테크    380 -0.11\n",
-       "1  컴퓨터와주변기기  129890     앱코   1227 -0.11\n",
-       "2     교육서비스  072870  메가스터디  11320 -0.82"
+       "1     교육서비스  072870  메가스터디  11320 -0.82\n",
+       "2  컴퓨터와주변기기  129890     앱코   1227 -0.11"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#merge메서드로 병합하기 \n",
-    "df = pd.merge(left=df1, right=df2, on='업종')\n",
+    "df = pd.merge(left=df1, right=df2, on='업종', how='inner')\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>업종</th>\n",
-       "      <th>등락률</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>건설</td>\n",
-       "      <td>0.05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>자동차</td>\n",
-       "      <td>0.93</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>교육서비스</td>\n",
-       "      <td>-0.82</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>컴퓨터와주변기기</td>\n",
-       "      <td>-0.11</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         업종   등락률\n",
-       "0        건설  0.05\n",
-       "1       자동차  0.93\n",
-       "2     교육서비스 -0.82\n",
-       "3  컴퓨터와주변기기 -0.11"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         업종    종목코드    종목명    현재가\n",
+      "0  컴퓨터와주변기기  044380   주연테크    380\n",
+      "1     교육서비스  072870  메가스터디  11320\n",
+      "2        식품  017810    풀무원  11460\n",
+      "         업종   등락률\n",
+      "0        건설  0.05\n",
+      "1       자동차  0.93\n",
+      "2     교육서비스 -0.82\n",
+      "3  컴퓨터와주변기기 -0.11\n"
+     ]
     }
    ],
    "source": [
@@ -476,163 +429,13 @@
     "columns = [\"업종\", \"등락률\"]\n",
     "df2 = DataFrame(data=data, columns=columns)\n",
     "\n",
-    "df2 "
+    "print(df1)\n",
+    "print(df2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>업종</th>\n",
-       "      <th>종목코드</th>\n",
-       "      <th>종목명</th>\n",
-       "      <th>현재가</th>\n",
-       "      <th>등락률</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>컴퓨터와주변기기</td>\n",
-       "      <td>044380</td>\n",
-       "      <td>주연테크</td>\n",
-       "      <td>380</td>\n",
-       "      <td>-0.11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>교육서비스</td>\n",
-       "      <td>072870</td>\n",
-       "      <td>메가스터디</td>\n",
-       "      <td>11320</td>\n",
-       "      <td>-0.82</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         업종    종목코드    종목명    현재가   등락률\n",
-       "0  컴퓨터와주변기기  044380   주연테크    380 -0.11\n",
-       "1     교육서비스  072870  메가스터디  11320 -0.82"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 두 데이터프레임을 병합합니다.\n",
-    "df = pd.merge(left=df1, right=df2, on='업종')\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>업종</th>\n",
-       "      <th>종목코드</th>\n",
-       "      <th>종목명</th>\n",
-       "      <th>현재가</th>\n",
-       "      <th>등락률</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>컴퓨터와주변기기</td>\n",
-       "      <td>044380</td>\n",
-       "      <td>주연테크</td>\n",
-       "      <td>380</td>\n",
-       "      <td>-0.11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>교육서비스</td>\n",
-       "      <td>072870</td>\n",
-       "      <td>메가스터디</td>\n",
-       "      <td>11320</td>\n",
-       "      <td>-0.82</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>식품</td>\n",
-       "      <td>017810</td>\n",
-       "      <td>풀무원</td>\n",
-       "      <td>11460</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         업종    종목코드    종목명    현재가   등락률\n",
-       "0  컴퓨터와주변기기  044380   주연테크    380 -0.11\n",
-       "1     교육서비스  072870  메가스터디  11320 -0.82\n",
-       "2        식품  017810    풀무원  11460   NaN"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 이번에는 how='left'를 지정해서 왼쪽을 기준으로 병합합니다.\n",
-    "df = pd.merge(left=df1, right=df2, on='업종', how='left')\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -708,20 +511,21 @@
        "3  컴퓨터와주변기기  044380   주연테크    380.0 -0.11"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 이번에는 how='right'를 지정해서 오른쪽을 기준으로 병합합니다.\n",
+    "# 두 데이터프레임을 병합합니다.\n",
+    "# 파이썬은 None(null) ==> NaN(Not a Number), 결측치 \n",
     "df = pd.merge(left=df1, right=df2, on='업종', how='right')\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +562,7 @@
        "      <td>컴퓨터와주변기기</td>\n",
        "      <td>044380</td>\n",
        "      <td>주연테크</td>\n",
-       "      <td>380.0</td>\n",
+       "      <td>380</td>\n",
        "      <td>-0.11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -766,7 +570,7 @@
        "      <td>교육서비스</td>\n",
        "      <td>072870</td>\n",
        "      <td>메가스터디</td>\n",
-       "      <td>11320.0</td>\n",
+       "      <td>11320</td>\n",
        "      <td>-0.82</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -774,52 +578,34 @@
        "      <td>식품</td>\n",
        "      <td>017810</td>\n",
        "      <td>풀무원</td>\n",
-       "      <td>11460.0</td>\n",
+       "      <td>11460</td>\n",
        "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>건설</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>자동차</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.93</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         업종    종목코드    종목명      현재가   등락률\n",
-       "0  컴퓨터와주변기기  044380   주연테크    380.0 -0.11\n",
-       "1     교육서비스  072870  메가스터디  11320.0 -0.82\n",
-       "2        식품  017810    풀무원  11460.0   NaN\n",
-       "3        건설     NaN    NaN      NaN  0.05\n",
-       "4       자동차     NaN    NaN      NaN  0.93"
+       "         업종    종목코드    종목명    현재가   등락률\n",
+       "0  컴퓨터와주변기기  044380   주연테크    380 -0.11\n",
+       "1     교육서비스  072870  메가스터디  11320 -0.82\n",
+       "2        식품  017810    풀무원  11460   NaN"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#양쪽의 누락값을 전부 포함할 경우 how='outer'라고 지정한다. \n",
-    "df = pd.merge(left=df1, right=df2, on='업종', how='outer')\n",
+    "# 이번에는 how='left'를 지정해서 왼쪽을 기준으로 병합합니다.\n",
+    "df = pd.merge(left=df1, right=df2, on='업종', how='left')\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -847,44 +633,182 @@
        "      <th>종목코드</th>\n",
        "      <th>종목명</th>\n",
        "      <th>현재가</th>\n",
+       "      <th>등락률</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>컴퓨터와주변기기</td>\n",
-       "      <td>044380</td>\n",
-       "      <td>주연테크</td>\n",
-       "      <td>380</td>\n",
+       "      <td>건설</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>교육서비스</td>\n",
-       "      <td>072870</td>\n",
-       "      <td>메가스터디</td>\n",
-       "      <td>11320</td>\n",
+       "      <td>자동차</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.93</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>식품</td>\n",
-       "      <td>017810</td>\n",
-       "      <td>풀무원</td>\n",
-       "      <td>11460</td>\n",
+       "      <td>교육서비스</td>\n",
+       "      <td>072870</td>\n",
+       "      <td>메가스터디</td>\n",
+       "      <td>11320.0</td>\n",
+       "      <td>-0.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>컴퓨터와주변기기</td>\n",
+       "      <td>044380</td>\n",
+       "      <td>주연테크</td>\n",
+       "      <td>380.0</td>\n",
+       "      <td>-0.11</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         업종    종목코드    종목명    현재가\n",
-       "0  컴퓨터와주변기기  044380   주연테크    380\n",
-       "1     교육서비스  072870  메가스터디  11320\n",
-       "2        식품  017810    풀무원  11460"
+       "         업종    종목코드    종목명      현재가   등락률\n",
+       "0        건설     NaN    NaN      NaN  0.05\n",
+       "1       자동차     NaN    NaN      NaN  0.93\n",
+       "2     교육서비스  072870  메가스터디  11320.0 -0.82\n",
+       "3  컴퓨터와주변기기  044380   주연테크    380.0 -0.11"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 이번에는 how='right'를 지정해서 오른쪽을 기준으로 병합합니다.\n",
+    "df = pd.merge(left=df1, right=df2, on='업종', how='right')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>업종</th>\n",
+       "      <th>종목코드</th>\n",
+       "      <th>종목명</th>\n",
+       "      <th>현재가</th>\n",
+       "      <th>등락률</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>건설</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>교육서비스</td>\n",
+       "      <td>072870</td>\n",
+       "      <td>메가스터디</td>\n",
+       "      <td>11320.0</td>\n",
+       "      <td>-0.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>식품</td>\n",
+       "      <td>017810</td>\n",
+       "      <td>풀무원</td>\n",
+       "      <td>11460.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>자동차</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>컴퓨터와주변기기</td>\n",
+       "      <td>044380</td>\n",
+       "      <td>주연테크</td>\n",
+       "      <td>380.0</td>\n",
+       "      <td>-0.11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         업종    종목코드    종목명      현재가   등락률\n",
+       "0        건설     NaN    NaN      NaN  0.05\n",
+       "1     교육서비스  072870  메가스터디  11320.0 -0.82\n",
+       "2        식품  017810    풀무원  11460.0   NaN\n",
+       "3       자동차     NaN    NaN      NaN  0.93\n",
+       "4  컴퓨터와주변기기  044380   주연테크    380.0 -0.11"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#양쪽의 누락값을 전부 포함할 경우 how='outer'라고 지정한다. \n",
+    "df = pd.merge(left=df1, right=df2, on='업종', how='outer')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         업종    종목코드    종목명    현재가\n",
+      "0  컴퓨터와주변기기  044380   주연테크    380\n",
+      "1     교육서비스  072870  메가스터디  11320\n",
+      "2        식품  017810    풀무원  11460\n",
+      "       업종명칭   등락률\n",
+      "0        건설  0.05\n",
+      "1       자동차  0.93\n",
+      "2     교육서비스 -0.82\n",
+      "3  컴퓨터와주변기기 -0.11\n"
+     ]
     }
    ],
    "source": [
@@ -915,12 +839,13 @@
     "columns = [\"업종명칭\", \"등락률\"]\n",
     "df2 = DataFrame(data=data, columns=columns)\n",
     "\n",
-    "df1 "
+    "print(df1)\n",
+    "print(df2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +906,7 @@
        "3  컴퓨터와주변기기 -0.11"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -992,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +978,7 @@
        "1     교육서비스  072870  메가스터디  11320     교육서비스 -0.82"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1091,7 +1016,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
