--- a/Pandas03_그룹핑과통계데이터다루기.ipynb
+++ b/Pandas03_그룹핑과통계데이터다루기.ipynb
@@ -6,20 +6,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_17108\\2995416522.py:2: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  from pandas import Series, DataFrame\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -51,36 +37,36 @@
        "      <th>0</th>\n",
        "      <td>a</td>\n",
        "      <td>one</td>\n",
-       "      <td>-1.541419</td>\n",
-       "      <td>1.139688</td>\n",
+       "      <td>1.740378</td>\n",
+       "      <td>1.613259</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>a</td>\n",
        "      <td>two</td>\n",
-       "      <td>0.170169</td>\n",
-       "      <td>1.914866</td>\n",
+       "      <td>-0.908682</td>\n",
+       "      <td>-1.743016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>b</td>\n",
        "      <td>one</td>\n",
-       "      <td>0.478558</td>\n",
-       "      <td>1.151265</td>\n",
+       "      <td>-0.130237</td>\n",
+       "      <td>1.155916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>b</td>\n",
        "      <td>two</td>\n",
-       "      <td>-0.380784</td>\n",
-       "      <td>-0.365598</td>\n",
+       "      <td>-0.279608</td>\n",
+       "      <td>-0.076854</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>a</td>\n",
        "      <td>one</td>\n",
-       "      <td>1.275307</td>\n",
-       "      <td>-2.682036</td>\n",
+       "      <td>0.901085</td>\n",
+       "      <td>-0.890998</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -88,11 +74,11 @@
       ],
       "text/plain": [
        "  key1 key2     data1     data2\n",
-       "0    a  one -1.541419  1.139688\n",
-       "1    a  two  0.170169  1.914866\n",
-       "2    b  one  0.478558  1.151265\n",
-       "3    b  two -0.380784 -0.365598\n",
-       "4    a  one  1.275307 -2.682036"
+       "0    a  one  1.740378  1.613259\n",
+       "1    a  two -0.908682 -1.743016\n",
+       "2    b  one -0.130237  1.155916\n",
+       "3    b  two -0.279608 -0.076854\n",
+       "4    a  one  0.901085 -0.890998"
       ]
      },
      "execution_count": 1,
@@ -114,84 +100,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.SeriesGroupBy object at 0x000002315E562F50>"
+       "<pandas.core.groupby.generic.SeriesGroupBy object at 0x00000134F1E15B10>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "grouped = df.groupby(\"key1\")[\"data1\"]\n",
+    "#5행 4열의 2차원 행열(도표)\n",
+    "grouped = df.groupby(\"key2\")[\"data2\"]\n",
     "grouped"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "key1\n",
-      "a   -0.031981\n",
-      "b    0.048887\n",
-      "Name: data1, dtype: float64\n",
-      "key1\n",
-      "a   -0.095943\n",
-      "b    0.097774\n",
-      "Name: data1, dtype: float64\n",
-      "key1\n",
-      "a    3\n",
-      "b    2\n",
-      "Name: data1, dtype: int64\n"
-     ]
-    }
-   ],
-   "source": [
-    "print( grouped.mean() )\n",
-    "print( grouped.sum() )\n",
-    "print( grouped.count() )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "key1  key2\n",
-       "a     one    -0.133056\n",
-       "      two     0.170169\n",
-       "b     one     0.478558\n",
-       "      two    -0.380784\n",
-       "Name: data1, dtype: float64"
+       "key2\n",
+       "one    0.626059\n",
+       "two   -0.909935\n",
+       "Name: data2, dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "means = df.groupby( [\"key1\",\"key2\"] )[\"data1\"].mean()\n",
+    "grouped.mean()\n",
+    "#grouped.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "key2  key1\n",
+       "one   a       2\n",
+       "      b       1\n",
+       "two   a       1\n",
+       "      b       1\n",
+       "Name: data1, dtype: int64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#복합키를 지정해서 사용 \n",
+    "#함수체인(메서드체인)\n",
+    "means = df.groupby( [\"key2\",\"key1\"] )[\"data1\"].count()\n",
     "means"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +259,7 @@
        "4   1  김길동   80  89   80"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,49 +278,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "465"
+       "446"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#합계\n",
-    "sum(dfClass[\"국어\"])"
+    "sum(dfClass[\"영어\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "93.0"
+       "89.2"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#평균\n",
-    "sum(dfClass[\"국어\"])/5"
+    "sum(dfClass[\"영어\"])/5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +405,7 @@
        "3   2  박문수  100  92  100"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -467,14 +450,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>홍길동</td>\n",
-       "      <td>100</td>\n",
-       "      <td>80</td>\n",
-       "      <td>90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2</td>\n",
        "      <td>박문수</td>\n",
@@ -489,6 +464,14 @@
        "      <td>95</td>\n",
        "      <td>95</td>\n",
        "      <td>92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>홍길동</td>\n",
+       "      <td>100</td>\n",
+       "      <td>80</td>\n",
+       "      <td>90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -512,36 +495,37 @@
       ],
       "text/plain": [
        "   학급   이름   국어  영어   수학\n",
-       "0   1  홍길동  100  80   90\n",
        "3   2  박문수  100  92  100\n",
        "2   2  이순신   95  95   92\n",
+       "0   1  홍길동  100  80   90\n",
        "1   1  전우치   90  90   80\n",
        "4   1  김길동   80  89   80"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#내림차순\n",
-    "dfClass.sort_values(\"국어\", ascending=False)"
+    "dfClass.sort_values(\"수학\", ascending=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#dict에 새로운 키와 값 \n",
     "#새로운 컬럼 추가하기\n",
     "dfClass[\"전체\"] = dfClass[\"국어\"] + dfClass[\"수학\"] + dfClass[\"영어\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +632,7 @@
        "4   1  김길동   80  89   80  249  83.000000"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +740,7 @@
        "4   1  김길동   80  89   80  249  83.000000"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,26 +752,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "학급\n",
-       "1    90.0\n",
-       "2    97.5\n",
-       "Name: 국어, dtype: float64"
+       "1    86.333333\n",
+       "2    93.500000\n",
+       "Name: 영어, dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#학급별로 그룹핑하기 \n",
-    "dfClass.groupby(\"학급\")[\"국어\"].mean()"
+    "dfClass.groupby(\"학급\")[\"영어\"].mean()"
    ]
   },
   {
@@ -839,6 +823,7 @@
     }
    ],
    "source": [
+    "#집계메서드:agg\n",
     "dfClass.agg(수학평균=(\"수학\",\"mean\"))"
    ]
   },
